chore: 增加自定义日历，TOOD: 完成配置保存和范围判断来打卡

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,10 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".service.AssistService"
+            android:priority="1000" />
+
 
         <receiver android:name=".broad.AlarmReceiver" android:enabled="true" android:exported="true">
             <intent-filter>
