--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ gson = { module = "com.google.code.gson:gson", version = "2.10.1" }
 libsu-core = { module = "com.github.topjohnwu.libsu:core", version = "3.0.1" }
 libsu-io = { module = "com.github.topjohnwu.libsu:io", version = "3.0.1" }
 
+calendarview = { module = "com.haibin:calendarview", version = "3.7.1" }
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
