fix 1. android 11以上提示企业微信未安装 2. 用户手动打开企业微信后，触发无障碍自动关闭程序

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,4 +102,9 @@
         <!--        </service>-->
     </application>
 
+    <!--  Android 11以上权限限制，加入这个才能取到launchIntent  -->
+    <queries>
+        <package android:name="com.tencent.wework" />
+    </queries>
+
 </manifest>
